fixing screenshots thumbnails overflow

--- a/src/common/vertical_steps/VerticalSteps.css
+++ b/src/common/vertical_steps/VerticalSteps.css
@@ -37,7 +37,7 @@
     background: #000000;
     margin: 0px auto 0 auto;
   }
-  .bottom {
+  /* .bottom {
       height: 150px;
       min-height:unset;
-  }
+  } */
